[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "template"
version = "0.1.0"
description = "A modern Python project template optimized for AI-assisted development"
readme = "README.md"
keywords = [
  "ai-development",
  "claude-code",
  "python",
  "template",
]
license = { file = "LICENSE" }
authors = [ { name = "takuoko", email = "to78314910@gmail.com" } ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  # Add your dependencies here
]

optional-dependencies.dev = [
  "coverage[toml]>=7",
  "pre-commit>=3",
  "pyright>=1.1",
  "pytest>=8",
  "pytest-cov>=4",
  "ruff>=0.8",
]
optional-dependencies.docs = [
  "furo>=2024.1.29",
  "linkify-it-py>=2",
  "myst-parser>=3",
  "sphinx>=7",
  "sphinx-autoapi>=3",
  "sphinx-autobuild>=2024.4.16",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.5",
  "sphinx-tabs>=3",
]

[tool.hatch.build.targets.wheel]
packages = [ "modules" ]

[tool.ruff]
target-version = "py312"
line-length = 88

format.indent-style = "space"
format.quote-style = "double"
lint.select = [ "ALL" ]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = [ "test_*.py", "*_test.py" ]
addopts = [
  "--cov=modules",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--strict-markers",
]

[tool.coverage.run]
source = [ "modules" ]
omit = [ "*/tests/*", "*/test_*" ]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if __name__ == .__main__.:",
  "raise AssertionError",
  "raise NotImplementedError",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypedDictNotRequiredAccess = false
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
]
include = [
  "modules",
  "tests",
]

[tool.wheel]
exclude = [
  "build*",
  "docs*",
  "dist*",
  "tests*",
  "docker*",
  "data*",
  "work_dirs*",
  "projects*",
]
